<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlighSimGps</string>
    <string name="action_settings">Settings</string>
    <string name="string_latitude">Latitude:</string>
    <string name="string_longitude">Longitude:</string>
    <string name="string_altitude">Altitude:</string>
    <string name="string_speed">Speed:</string>
    <string name="string_start">Start</string>
    <string name="string_stop">Stop</string>
    <string name="string_status">Status:</string>
    <string name="string_not_started">Not started</string>
    <string name="string_running">Running:</string>
    <string name="string_host_pref_title">Host</string>
    <string name="string_host_pref_description">Server hostname or IP address</string>
    <string name="string_port_pref_title">Port</string>
    <string name="string_port_pref_description">Server port</string>
    <string name="string_transition_pref_title">Use animation</string>
    <string name="string_transition_pref_description">Enables the animated transition between the application screens</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_about">About</string>

    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_connected">Connected</string>
    <string name="status_unknown">Unknown</string>

    <string name="ok">OK</string>

    <string name="pref_incorrect_port_alert_title">Incorrect port</string>
    <string name="pref_incorrect_port_alert_message">Port should be in range 1 - 65535.</string>
    <string name="pref_incorrect_host_alert_title">Incorrect host</string>
    <string name="pref_incorrect_host_alert_message">Host should be a valid IPv4 address. Example: 192.168.1.1</string>
    <string name="allow_mock_alert_title">Allow Mock Locations Required</string>
    <string name="allow_mock_alert_message">You should enable "Allow Mock Locations" option at your System Developer Settings to use this application.</string>

</resources>
